--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <ul class="site-nav list">
           <li class="item"><a href="./index.html" class="link">Студия</a></li>
           <li class="item">
-            <a href="./portfolio.html" class="link">Портфолио</a>
+            <a href="./portfolio.html" class="link border">Портфолио</a>
           </li>
           <li class="item"><a href="#" class="link">Контакты</a></li>
         </ul>
@@ -62,9 +62,13 @@
 
           <ul class="list-flex">
             <li class="flex-item">
-              <a href="#">
+              <a class="link" href="#">
                 <div class="position-portfolio">
-                  <img src="./img/portfolio-1.jpg" alt="" />
+                  <img
+                    src="./img/portfolio-1.jpg"
+                    alt="Технокряк"
+                    width="100%"
+                  />
                   <p class="text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -80,7 +84,11 @@
             <li class="flex-item">
               <a href="#">
                 <div class="position-portfolio">
-                  <img src="./img/portfolio-2.jpg" alt="" />
+                  <img
+                    src="./img/portfolio-2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="100%"
+                  />
                   <p class="text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -96,7 +104,11 @@
             <li class="flex-item">
               <a href="#">
                 <div class="position-portfolio">
-                  <img src="./img/portfolio-3.jpg" alt="" />
+                  <img
+                    src="./img/portfolio-3.jpg"
+                    alt="Ресторан Seafood"
+                    width="100%"
+                  />
                   <p class="text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -112,7 +124,11 @@
             <li class="flex-item">
               <a href="#">
                 <div class="position-portfolio">
-                  <img src="./img/portfolio-4.jpg" alt="" />
+                  <img
+                    src="./img/portfolio-4.jpg"
+                    alt="Проект Prime"
+                    width="100%"
+                  />
                   <p class="text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -128,7 +144,11 @@
             <li class="flex-item">
               <a href="#">
                 <div class="position-portfolio">
-                  <img src="./img/portfolio-5.jpg" alt="" />
+                  <img
+                    src="./img/portfolio-5.jpg"
+                    alt="Проект Boxes"
+                    width="100%"
+                  />
 
                   <p class="text">
                     Технокряк это современная площадка распространения
@@ -145,7 +165,11 @@
             <li class="flex-item">
               <a href="#">
                 <div class="position-portfolio">
-                  <img src="./img/portfolio-6.jpg" alt="" />
+                  <img
+                    src="./img/portfolio-6.jpg"
+                    alt="Inspiration has no Borders"
+                    width="100%"
+                  />
 
                   <p class="text">
                     Технокряк это современная площадка распространения
@@ -162,7 +186,11 @@
             <li class="flex-item">
               <a href="#">
                 <div class="position-portfolio">
-                  <img src="./img/portfolio-7.jpg" alt="" />
+                  <img
+                    src="./img/portfolio-7.jpg"
+                    alt="Издание Limited Edition"
+                    width="100%"
+                  />
                   <p class="text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -178,7 +206,11 @@
             <li class="flex-item">
               <a href="#">
                 <div class="position-portfolio">
-                  <img src="./img/portfolio-8.jpg" alt="" />
+                  <img
+                    src="./img/portfolio-8.jpg"
+                    alt="Проект LAB"
+                    width="100%"
+                  />
                   <p class="text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -194,7 +226,11 @@
             <li class="flex-item">
               <a href="#">
                 <div class="position-portfolio">
-                  <img src="./img/portfolio-9.jpg" alt="" />
+                  <img
+                    src="./img/portfolio-9.jpg"
+                    alt="Growing Business"
+                    width="100%"
+                  />
                   <p class="text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -272,9 +308,13 @@
             <b class="footer-title">Подпишитесь на рассылку</b>
             <div class="button-email"><span>E-mail</span></div>
           </div>
-          <!-- <div class="button-telegram-flex">
-          <button class="button-telegram"> <span>Подписаться <svg  width="24px" height="24px"><use href="./img/sprite.svg#icon-telegram"></use></svg></span> </button>
-         </div> -->
+
+          <button class="footer-btn">
+            Подписаться
+            <svg class="telegram" width="24px" height="24px">
+              <use href="./img/sprite.svg#icon-telegram"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </footer>
